test/libhyperion/semanticTests/errors/revert_conversion.hyp
error E(string a, uint[] b);
contract C {
    uint[] x;
    function f() public {
        x.push(7);
        revert E("abc", x);
    }
}
// ----
// f() -> FAILURE, hex"59e4d4df", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000080", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000100", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003", hex"61626300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001", hex"00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007"
